页面配置修改

--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,2 +1,4 @@
-// you can change config here
-$theme-color: #096dd9;
+// $theme-color: #2196f3; //设置默认主题颜色
+// 设置主题多种颜色
+$theme-colors: #096dd9,#2196f3, #f26d6d, #3eaf7c, #fb9b5f;
+
